# docker

./: .env-dev-example  .env.development  .env.integration  .gitignore  Makefile  README.md  clean_docker.sh  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
alembic/: env.py  script.py.mako
alembic/versions/: 1399287ddb7c_migration.py  672c3b42aac0_migration.py
docker/: base.Dockerfile  base_python.Dockerfile  be.Dockerfile  fe.Dockerfile
makefiles/: color.mk  db.mk  poetry.mk  setup.mk
web/: db.py  generics.py  main.py  utils.py
web/config/: env.py
web/models/: user.py
web/test/: test_health.py  test_user.py
