[tool.poetry]
name = "octavio_web"
version = "0.1.0"
description = ""
authors = ["occy88 <octavio.delser@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.5"
pytest-xdist = "^3.5.0"
pytest-cov = "^4.1.0"
pytest = "^8.0.1"
pytest-mock = "^3.12.0"


[tool.poetry.group.web.dependencies]
fastapi = "^0.109.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
